# imbalanced_credit_fraud_detection

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_train_test_val_split.ipynb  02_exploratory_data_analysis.ipynb  03_model_selection.ipynb
scripts/: download_dataset.py  utils.py
