[project]
name = "imbalanced-credit-fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "kaggle>=1.7.4.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "taskipy>=1.14.1",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'LOG', 'TD', 'PD']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
pre_lint = 'ruff format'
lint = 'ruff check --fix'
